--- a/index.html
+++ b/index.html
@@ -48,7 +48,125 @@
 </head>
 <body>
 
-    <h1>Rent vs Buy & Sell in 5 Years</h1
+    <h1>Rent vs Buy & Sell in 5 Years</h1>
+    <p style="text-align:center;">Which Puts More Money in Your Pocket?</p>
+
+    <label>Home Purchase Price ($):</label>
+    <input type="number" id="homePrice" value="300000">
+
+    <label>Down Payment (%):</label>
+    <input type="number" id="downPayment" value="5">
+
+    <label>Loan Interest Rate (%):</label>
+    <input type="number" id="interestRate" value="6.5">
+
+    <label>Loan Term (years):</label>
+    <input type="number" id="loanTerm" value="30">
+
+    <label>Annual Property Value Growth (%):</label>
+    <input type="number" id="growthRate" value="2">
+
+    <label>Monthly Rent ($):</label>
+    <input type="number" id="monthlyRent" value="1600">
+
+    <label>Annual Rent Increase (%):</label>
+    <input type="number" id="rentIncrease" value="3">
+
+    <label>Years to Compare:</label>
+    <input type="number" id="years" value="5">
+
+    <div class="results" id="results"></div>
+
+    <footer>
+        Chris Garrard | Veteran-Owned Real Estate
+    </footer>
+
+    <script>
+        function formatNumber(num) {
+            return num.toLocaleString('en-US', { minimumFractionDigits: 2, maximumFractionDigits: 2 });
+        }
+
+        function calculate() {
+            const getValue = (id) => parseFloat(document.getElementById(id).value) || 0;
+
+            const homePrice = getValue('homePrice');
+            const downPaymentPercent = getValue('downPayment');
+            const interestRateMonthly = getValue('interestRate') / 100 / 12;
+            const loanTermMonths = getValue('loanTerm') * 12;
+            const growthRate = getValue('growthRate') / 100;
+            let monthlyRent = getValue('monthlyRent');
+            const rentIncrease = getValue('rentIncrease') / 100;
+            const years = getValue('years');
+            const sellingCostPercent = 0.07; // 7% selling costs
+            const annualStockReturn = 0.07;
+            const stockReturnMonthly = Math.pow(1 + annualStockReturn, 1 / 12) - 1;
+
+            const downPayment = homePrice * (downPaymentPercent / 100);
+            const loanAmount = homePrice - downPayment;
+            const monthlyPrincipalInterest = loanAmount * interestRateMonthly / (1 - Math.pow(1 + interestRateMonthly, -loanTermMonths));
+
+            let totalRentCost = 0;
+            let homeValue = homePrice;
+            let remainingLoan = loanAmount;
+
+            for (let i = 1; i <= years; i++) {
+                homeValue *= (1 + growthRate);
+                totalRentCost += monthlyRent * 12;
+                monthlyRent *= (1 + rentIncrease);
+
+                // Loan amortization approximation for 1 year
+                remainingLoan = remainingLoan * Math.pow(1 + interestRateMonthly, 12) - (monthlyPrincipalInterest * ((Math.pow(1 + interestRateMonthly, 12) - 1) / interestRateMonthly));
+            }
+
+            const sellingCosts = homeValue * sellingCostPercent;
+            const cashAfterSale = homeValue - remainingLoan - sellingCosts;
+
+            // Monthly rent vs mortgage difference
+            const totalMonthlyHousingCost = monthlyPrincipalInterest; // Simplified: P&I only
+            const averageMonthlyRent = totalRentCost / (years * 12);
+            const monthlyDifference = totalMonthlyHousingCost - averageMonthlyRent;
+
+            // Stock investment simulation if renting is cheaper monthly
+            let futureStockValue = 0;
+            if (monthlyDifference > 0) {
+                for (let m = 0; m < years * 12; m++) {
+                    futureStockValue = (futureStockValue + monthlyDifference) * (1 + stockReturnMonthly);
+                }
+            }
+
+            const resultMessage = cashAfterSale > totalRentCost
+                ? 'Buying is better in this time frame!'
+                : 'Renting is cheaper in this time frame, but buying builds equity!';
+
+            document.getElementById('results').innerHTML = `
+                <strong>Renting Total Cost Over ${years} Years:</strong> $${formatNumber(totalRentCost)}<br><br>
+
+                <strong>Estimated Home Value After ${years} Years:</strong> $${formatNumber(homeValue)}<br>
+                <strong>Remaining Loan Balance:</strong> $${formatNumber(remainingLoan)}<br>
+                <strong>Estimated Selling Costs (7%):</strong> $${formatNumber(sellingCosts)}<br>
+                <strong>Cash You’d Pocket After Selling:</strong> <strong>$${formatNumber(cashAfterSale)}</strong><br><br>
+
+                <strong>Final Comparison:</strong><br>
+                Renting costs you $${formatNumber(totalRentCost)} with $0 return.<br>
+                Buying puts <strong>$${formatNumber(cashAfterSale)}</strong> in your pocket after ${years} years.<br><br>
+
+                ${monthlyDifference > 0
+                    ? `If you rented and invested $${formatNumber(monthlyDifference)} per month at 7% annual return, you'd have about <strong>$${formatNumber(futureStockValue)}</strong> after ${years} years.<br><br>`
+                    : ''}
+
+                <strong>${resultMessage}</strong>
+            `;
+        }
+
+        document.querySelectorAll('input').forEach(el => {
+            el.addEventListener('input', calculate);
+        });
+        window.onload = calculate;
+    </script>
+
+</body>
+</html>
+
 
 
 
